--- a/styles/main.css
+++ b/styles/main.css
@@ -1,28 +1,28 @@
-/* the styles for the elements /
+/* the styles for the elements */
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
     margin-left: 10px;
 }
-a:focus, a:hover {
-    font-style: italic;
-}
-/ the styles for the header /
-header h2 {
-    font-size: 130%;
-    color: #800000;
-}
-header h3 {
-    font-size: 105%;
-    text-indent: 30px;
-}
+/* the styles for the header */
 header img {
     float: left;
+}
+header h2 {
+    font-size: 170%;
+    color: #800000;
+    text-indent: 30px;
+}
+header h3 {
+    font-size: 130%;
+    font-style: italic;
+    text-indent: 30px;
+
 }
 .shadow {
     text-shadow: 2px 2px 2px #800000;
 }
-/ the styles for the main content /
+/* the styles for the main content */
 main {
     clear: left;
 }
@@ -36,8 +36,9 @@ main h2 {
 main h3 {
     font-size: 105%;
 }
-
-/ the styles for the footer */
+a:focus, a:hover {
+    font-style: italic;
+}
+/* the styles for the footer */
 footer p {
 	text-align: center;
-}
