--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,12 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    margin-left: 10px;
+    margin-left: auto;
+    width: 600px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right: auto;
+    border: 3px #931420;
 }
 /* the styles for the header */
 header img {
