--- a/styles/main.css
+++ b/styles/main.css
@@ -4,8 +4,8 @@ body {
     font-size: 100%;
     margin-left: auto;
     width: 600px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin-top: 0;
+    margin-bottom: 0;
     margin-right: auto;
     border: 3px #931420;
 }
