--- a/styles/main.css
+++ b/styles/main.css
@@ -2,12 +2,13 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    margin-left: auto;
     width: 600px;
     margin-top: 0;
     margin-bottom: 0;
+    margin-left: auto;
     margin-right: auto;
-    border: 3px #931420;
+    border-width: 3px;
+    border-color: #931420;
 }
 /* the styles for the header */
 header img {
