--- a/styles/main.css
+++ b/styles/main.css
@@ -14,15 +14,24 @@ body {
 header img {
     float: left;
 }
+
+header {
+    padding: 1.5em 0 2em 0;
+    border-bottom: 3px solid #931420;
+    background-image: linear-gradient(
+        30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+}
 header h2 {
     font-size: 170%;
     color: #800000;
-    text-indent: 30px;
+    padding: 0 30px 0 30px;
+
+
 }
 header h3 {
     font-size: 130%;
     font-style: italic;
-    text-indent: 30px;
+    padding: 0 30px 0 30px;
 
 }
 .shadow {
@@ -31,17 +40,28 @@ header h3 {
 /* the styles for the main content */
 main {
     clear: left;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 main h1 {
     font-size: 150%;
+    padding-top: .3em;
+    padding-bottom: .25ex;
 }
 main h2 {
     color: #800000;
     font-size: 130%;
+    padding-top: .5em;
+    padding-bottom: .25em;
 }
 main h3 {
     font-size: 105%;
+    padding-bottom: .25em;
+
 }
+
 a:focus, a:hover {
     font-style: italic;
 }
